[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_interpolator"
version = "0.1.0"
description = "Regridding tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Iggy Naus", email = "igna9555@colorado.edu"},
    {name = "Skai Glasser Naus", email = "Skai.Glasser@colorado.edu"}
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
run-data-interpolator = "data_interpolator.data_interp.main"